# meditation_API

./: .gitignore  Procfile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 2e775d15642c_initial_migration.py  a4688c67a62c_initial_migration.py
src/: Procfile  dependencies.py  healthcheck.py  initial_data.py  logger.py  main.py  settings.py
src/api/: deps.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: exercises.py  healthcheck.py  login.py  posts.py  users.py
src/auth/: jwthandler.py
src/config/: development.env  production.env  tests.env
src/db/: config.py
src/db/crud/: base_crud.py  exercise_crud.py  post_crud.py  user_crud.py
src/db/init/: init_db.py  populators.py
src/db/init/tables/: permissions.csv
src/db/models/: base.py  exercise.py  post.py  user.py
src/db/schemas/: common_schemas.py  exercise_schema.py  post_schema.py  user_schema.py
src/helpers/: user_info.py
src/schemas/: permission_schema.py  statistic_schema.py
src/services/: pagination_ext.py
