[tool.poetry]
name = "domino-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.19.0"
asyncpg = "^0.27.0"
bcrypt = "^4.0.1"
fastapi = "^0.97.0"
fastapi-pagination = "^0.12.7"
passlib = "^1.7.4"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.16"
uvicorn = "^0.22.0"
alembic = "^1.11.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.25.1"}
minio = "^7.1.15"
shortuuid = "^1.0.11"
aiohttp = "^3.8.4"
email-validator = "^2.0.0.post2"
aiocache = "^0.12.1"
black = "^23.10.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
isort = "^5.12.0"
mypy = "^1.4.0"



[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
httpx = "^0.24.1"
pytest-env = "^0.8.2"
pytest-xdist = "^3.3.1"
jsonpath-ng = "^1.5.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.populator]
optional = true

[tool.poetry.group.populator.dependencies]
essential-generators = "^1.0"
fake-useragent = "^1.1.3"
psycopg2 = "^2.9.6"
shortuuid = "^1.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
enable = [
    'all'
]
disable = [
    'import-error',
    'no-name-in-module',
    'missing-function-docstring',
    'missing-module-docstring',
]

[tool.pylint.'BASIC']
variable-rgx = [
    '[a-z\_][a-z0-9_]{0,19}$'
]
